@@ -3,22 +3,23 @@ package com.bda.bda.service;
 import com.bda.bda.dto.request.StudentRequest;
 import com.bda.bda.dto.response.StudentResponse;
 import com.bda.bda.exception.ResourceNotFoundException;
+import com.bda.bda.exception.StudentAlreadyExistsException;
 import com.bda.bda.model.Student;
 import com.bda.bda.repository.StudentRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class StudentService {
+
     private final StudentRepository studentRepository;
 
     public List<StudentResponse> findAll() {
-        return studentRepository.findAll().stream().map(this::toResponse).collect(Collectors.toList());
+        return studentRepository.findAll().stream().map(this::toResponse).toList();
     }
 
     public StudentResponse findById(Integer id) {
@@ -27,6 +28,11 @@ public class StudentService {
 
     @Transactional
     public StudentResponse create(StudentRequest request) {
+        if (studentRepository.existsByFullNameIgnoreCase(request.fullName())) {
+            throw new StudentAlreadyExistsException(
+                    "Student already exists with name: " + request.fullName()
+            );
+        }
         Student student = Student.builder()
                 .fullName(request.fullName())
                 .build();
@@ -36,14 +42,19 @@ public class StudentService {
     @Transactional
     public StudentResponse update(Integer id, StudentRequest request) {
         Student student = getOrThrow(id);
+        if (!student.getFullName().equalsIgnoreCase(request.fullName())
+                && studentRepository.existsByFullNameIgnoreCase(request.fullName())) {
+            throw new StudentAlreadyExistsException(
+                    "Another student already exists with name: " + request.fullName()
+            );
+        }
         student.setFullName(request.fullName());
         return toResponse(studentRepository.save(student));
     }
 
     @Transactional
     public void delete(Integer id) {
-        Student student = getOrThrow(id);
-        studentRepository.delete(student);
+        studentRepository.delete(getOrThrow(id));
     }
 
     private Student getOrThrow(Integer id) {
@@ -51,7 +62,7 @@ public class StudentService {
                 .orElseThrow(() -> new ResourceNotFoundException("Student not found with id: " + id));
     }
 
-    public StudentResponse toResponse(Student s) {
+    private StudentResponse toResponse(Student s) {
         return new StudentResponse(s.getStudentId(), s.getFullName(), s.getAverage());
     }
 }
